feat(video-gen): add video gen service with hunyuan and comfyUI
